--- a/src/assets/css/myapp.css
+++ b/src/assets/css/myapp.css
@@ -1,6 +1,6 @@
 #elmain{
     padding: 10px 10px 10px 5px;
-    background-color: #b3e19d;
+    background-color: #edf2fc;
 }
 #elheader{
     padding: 0;
@@ -8,6 +8,9 @@
 }
 #elaside{
     padding: 0;
-    height: 100%;
+    background-color: #545c64;
     overflow: hidden;
+}
+.el-container{
+    height: 800px;
 }
